--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,6 +1,6 @@
 main:
 
-  - title: Continual Learning for Abdominal Multi-Organ and Tumor Segmentation
+  - title: First and Second Derivatives of the Chemical Potential for Noninteracting Particles
     authors: Jacob Katriel, <strong>Hongrui Zhang</strong>
     journal: Journal of Low Temperature Physics, 202(1-2), 263-268.
     pdf: ./assets/files/Katriel-Zhang2020_Article_FirstAndSecondDerivativesOfThe.pdf
