--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -3,6 +3,6 @@ main:
   - title: Enhanced Optical Characterization Using Convolutional Neural Networks
     authors: <strong>Hongrui Zhang</strong>, Michael O. Thompson
     pdf: ./assets/files/Master_Thesis_final_version.pdf
-    image: ./assets/img/heatmap_merged_Optimized.png
+    image: ./assets/img/heatmap_merged_Optimized.jpeg
     code: https://github.com/lukezhr/ReflectanceCNN
     notes: Master Thesis
